[package]
name = "libnanoc"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.9.7"
lalrpop-util = "0.17.2"

[build-dependencies]
lalrpop = "0.17.2"
